fix: force span to display:block + width:100% so text-align:center works

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4350,6 +4350,8 @@ video.question-media {
 }
 
 .simple-puzzle-title {
+  display: block;
+  width: 100%;
   font-size: 0.8rem;
   font-weight: 700;
   color: var(--text-dim);
